--- a/src/Office.ODF/project.json
+++ b/src/Office.ODF/project.json
@@ -5,7 +5,9 @@
   "version": "0.0.0-0",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    "System.Xml.XmlDocument": "4.0.1",
+    "Web.Common": "0.0.0-0"
   },
 
   "frameworks": {
